p3/config/ingress-playground.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.fronted.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific 
        backend:
          service:
            name: guestbook-ui
            port:
              number: 80
